change to Mailgun API

--- a/example.env
+++ b/example.env
@@ -37,7 +37,8 @@ REDIS_PREFIX=GSD_
 # Logger - Possible values: trace, debug, info, warn, error, fatal
 LOG_LEVEL=debug
 
-MANDRILL_ENABLED=true
-MANDRILL_API_KEY={ask_me_for_it_😉}
-MAIL_FROM_NAME=yabdul
-MAIL_FROM_EMAIL=yabdala@indevs.site
+MAILGUN_ENABLED=true
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
+MAIL_FROM_NAME=
+MAIL_FROM_EMAIL=
