--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
   "author": "Yabdul Abdala",
   "license": "0BSD",
   "devDependencies": {
-    "nodemon": "^2.0.20",
+    "@getify/eslint-plugin-proper-arrows": "^11.0.3",
     "eslint": "^8.34.0",
-    "@getify/eslint-plugin-proper-arrows": "^11.0.3"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
-    "@mailchimp/mailchimp_transactional": "^1.0.50",
     "argon2": "^0.30.3",
     "await-of": "^3.1.1",
     "dayjs": "^1.11.7",
@@ -53,7 +52,9 @@
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^6.1.0",
     "koa-logger": "^3.2.1",
+    "koa-passport": "^6.0.0",
     "koa-respond": "^2.1.0",
+    "koa-session": "^6.4.0",
     "koa-static": "^5.0.0",
     "link-module-alias": "^1.2.0",
     "logger": "^0.0.1",
@@ -61,12 +62,11 @@
     "mysql2": "^2.3.3",
     "oauth2-server": "^3.1.1",
     "objection": "^3.0.1",
+    "passport-oauth2": "1.6.1",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
     "redlock": "^4.2.0",
     "sanitize-html": "^2.8.1",
-    "koa-passport": "^6.0.0",
-    "passport-oauth2": "1.6.1",
-    "koa-session": "^6.4.0"
+    "simple-mailgun.js": "^0.0.2"
   }
 }
