--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@koa/router": "^12.0.0",
     "argon2": "^0.30.3",
     "await-of": "^3.1.1",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
